--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -71,7 +71,7 @@
     <section class="intro section-padding" id="features">
         <div class="container">
             <div class="col-md-12 text-center">
-                <h2>Saturday &middot; Novermber 7 &middot; 2015 &middot; 4:30pm</h2>
+                <h2>Saturday &middot; November 7 &middot; 2015 &middot; 4:30pm</h2>
                 <h3>Brooklyn, New York</h3>
                 <hr>
                 <h5>Attire: <a href="http://www.realsimple.com/beauty-fashion/clothing/dress-code" target="_blank">semiformal</a> (or whatever suits you, get it?).</h5>
@@ -96,7 +96,7 @@
                 <div class="col-md-6 intro-feature">
                     <div class="intro-content">
                         <p>dinner &middot; 6–9pm</p>
-                        <h5><a href="http://www.stmazie.com/" target="_blank">Saint Mazie Bar & Supper Club</a> (We'll be in the <a href="http://stcharlescellar.com/">basement</a>)</h5>
+                        <h5><a href="http://www.stmazie.com/" target="_blank">Saint Mazie Bar & Supper Club</a> (We'll be in the <a href="http://stcharlescellar.com/"  target="_blank">basement</a>)</h5>
                         <p class="tighten">345 Grand Street near Havemeyer Street</p>
                         <p>Near the Metropolitan Avenue stop on the G Train</p>
                         <div class="zoomy1">
@@ -256,6 +256,8 @@
                 <h2>Traversing the City</h2>
 
                 <p>The best way to get around New York is by <a href="http://web.mta.info/maps/submap.html" target="_blank">subway</a>.<strong> Pro tip:</strong> before purchasing a metro card, use this <a href="http://enterprise.mtanyct.info/MetroCardCalculator/" target="_blank">calculator</a> to determine how many rides you can get out of whatever amount you put on your card. Go with their suggestions to avoid getting stuck with a remaining balance.</p>
+
+                <p>The church and the restaurant are both near the subway, two stops away from each other on the G line.</p>
 
                 <p>New York has an excellent <a href="https://www.citibikenyc.com/" target="_blank">bike sharing system</a> too with hubs all over the city. Extra points for anyone who bikes to the wedding! And <a href="http://www.eastriverferry.com/" target="_blank">The East River Ferry</a> is a great way to get out on the water for not much more than a subway ride.</p>
 
