--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -37,7 +37,7 @@
                         <nav>
                             <ul class="primary-nav">
                                 <li><a href="#event">Event</a></li>
-                                <li><a href="#brooklyn">Brooklyn</a></li>
+                                <li><a href="#brooklyn">Breuckelen</a></li>
                                 <li><a href="#collaborate">Collaborate</a></li>
                                 <li><a href="#faq">FAQs</a></li>
                                 <li><a href="#registry">Registry</a></li>
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center">
-                        <h3 class="warning">(SITE STILL VERY MUCH UNDER CONSTRUCTION)</h3>
+                        <h3 class="warning">(SITE STILL UNDER CONSTRUCTION)</h3>
                         <p class="intro hand">Welcome to the wedding page for Jillian and Chris.</p>
                         <h1 class="bighand"><a href="#hashtag">#GtrainLoveStory</a></h1>
                     </div>
@@ -110,7 +110,7 @@
             <hr>
             <div class="col-md-12 text-center">
                 <h3>Ceremony Schedule</h3>
-                <p>The ceremony take place at <strong>4:30pm</strong> but guests can begin ariving at <strong>4pm.</strong></p>
+                <p>The ceremony will take place at <strong>4:30pm</strong> but guests can begin ariving at <strong>4pm.</strong></p>
                 <ul>
                     <li>prelude</li>
                     <li>processional</li>
