--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -80,7 +80,7 @@
                     <div class="intro-content">
                         <p>ceremony &middot; 4:30pm–5pm</p>
                         <h5><a href="http://www.ascensionbrooklyn.org/" target="_blank">Church of the Ascension</a></h5>
-                        <p class="tighten">127 Kent Street near Manhattan Avenue</p>
+                        <p>127 Kent Street near Manhattan Avenue</p>
                         <p>Near the Greenpoint Avenue stop on the G Train</p>
                         <div class="zoomy1">
                             <a href="http://www.ascensionbrooklyn.org/" target="_blank">
@@ -95,7 +95,7 @@
                     <div class="intro-content">
                         <p>dinner &middot; 6–9pm</p>
                         <h5><a href="http://www.stmazie.com/" target="_blank">Saint Mazie Bar & Supper Club</a> (We'll be in the <a href="http://stcharlescellar.com/"  target="_blank">basement</a>)</h5>
-                        <p class="tighten">345 Grand Street near Havemeyer Street</p>
+                        <p>345 Grand Street near Havemeyer Street</p>
                         <p>Near the Metropolitan Avenue stop on the G Train</p>
                         <div class="zoomy1">
                             <a href="http://www.stmazie.com/" target="_blank">
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="row">
                 <div>
-                    <h3>Readings</h3>
+                    <h3 class="col-md-12 text-center">Readings</h3>
                 </div> 
             </div>
             <div class="row">
@@ -143,20 +143,20 @@
                 <div class="col-md-4">
                     <h5>Forever – is composed of Nows</h5>
                     <h6>by Emily Dickinson</h6>
-                    <p class="tighten">Forever – is composed of Nows –</p>
-                    <p class="tighten">‘Tis not a different time –</p>
-                    <p class="tighten">Except for Infiniteness –</p>
-                    <p class="tighten">And Latitude of Home –</p>
-                    <br>
-                    <p class="tighten">From this – experienced Here –</p>
-                    <p class="tighten">Remove the Dates – to These –</p>
-                    <p class="tighten">Let Months dissolve in further Months –</p>
-                    <p class="tighten">And Years – exhale in Years –</p>
-                    <br>
-                    <p class="tighten">Without Debate – or Pause –</p>
-                    <p class="tighten">Or Celebrated Days –</p>
-                    <p class="tighten">No different Our Years would be</p>
-                    <p class="tighten">From Anno Dominies –</p>
+                    <p>Forever – is composed of Nows –<br>
+                    ‘Tis not a different time –<br>
+                    Except for Infiniteness –<br>
+                    And Latitude of Home –<br>
+                    <br><br>
+                    From this – experienced Here –<br>
+                    Remove the Dates – to These –<br>
+                    Let Months dissolve in further Months –<br>
+                    And Years – exhale in Years –<br>
+                    <br><br>
+                    Without Debate – or Pause –<br>
+                    Or Celebrated Days –<br>
+                    No different Our Years would be<br>
+                    From Anno Dominies –</p>
                 </div>
             </div>
             <div class="row">
@@ -169,23 +169,23 @@
                 <div class="col-md-4">
                     <h5>Count That Day Lost </h5>
                     <h6>by George Eliot</h6>
-                    <p class="tighten">If you sit down at set of sun</p>
-                    <p class="tighten">And count the acts that you have done,</p>
-                    <p class="tighten">And, counting, find</p>
-                    <p class="tighten">One self-denying deed, one word</p>
-                    <p class="tighten">That eased the heart of him who heard,</p>
-                    <p class="tighten">One glance most kind</p>
-                    <p class="tighten">That fell like sunshine where it went —</p>
-                    <p class="tighten">Then you may count that day well spent.</p>
-                    <br>
-                    <p class="tighten">But if, through all the livelong day,</p>
-                    <p class="tighten">You've cheered no heart, by yea or nay —</p>
-                    <p class="tighten">If, through it all</p>
-                    <p class="tighten">You've nothing done that you can trace</p>
-                    <p class="tighten">That brought the sunshine to one face—</p>
-                    <p class="tighten">No act most small</p>
-                    <p class="tighten">That helped some soul and nothing cost —</p>
-                    <p class="tighten">Then count that day as worse than lost.</p>
+                    <p>If you sit down at set of sun<br>
+                    And count the acts that you have done,<br>
+                    And, counting, find<br>
+                    One self-denying deed, one word<br>
+                    That eased the heart of him who heard,<br>
+                    One glance most kind<br>
+                    That fell like sunshine where it went —<br>
+                    Then you may count that day well spent.<br>
+                    <br><br>
+                    But if, through all the livelong day,<br>
+                    You've cheered no heart, by yea or nay —<br>
+                    If, through it all<br>
+                    You've nothing done that you can trace<br>
+                    That brought the sunshine to one face—<br>
+                    No act most small<br>
+                    That helped some soul and nothing cost —<br>
+                    Then count that day as worse than lost.</p>
                 </div>
             </div>
         </div>
@@ -210,32 +210,28 @@
                     <h2>Accommodations</h2>   
                     <br> 
                     <h5>Airbnb</h5>
-                    <p>Airbnb is a great way to take advantage of some amazing apartment rentals in Brooklyn.</p>
-                    <p><a href="https://www.airbnb.com/" target="_blank">visit website</a></p>
-                    <br>
-                    <h5>Hotel le Jolie</h5>
-                    <p>The best value in the neighborhood. Great location, no frills.</p>
-                    <p>235 Meeker Avenue between Union Avenue and Lorimer Street, Brooklyn</p>
-                    <p>718.625.2100</p>
-                    <p><a href="http://www.hotellejolie.com/" target="_blank">visit website</a></p>
-                    <br>
-                    <h5>McCarren Hotel & Pool</h5>
-                    <p>Upscale and right near the park.</p>
-                    <p>160 North 12th Street between Berry Street and Bedford Avenue, Brooklyn</p>
-                    <p>718.218.7500</p>
-                    <p><a href="http://www.chelseahotels.com/us/brooklyn/mccarren-hotel-and-pool/about" target="_blank">visit website</a></p>
-                    <br>
-                    <h5>The Henry Norman Hotel</h5>
-                    <p>A little out of the way but very nice.</p>
-                    <p>251 North Henry Street, Brooklyn</p>
-                    <p>718.951.6000</p>
-                    <p><a href="http://www.henrynormanhotel.com/" target="_blank">visit website</a></p>
-                    <br>
-                    <h5>Urban Cowboy BnB</h5>
-                    <p>Rustic and relaxing with a cabin feel.</p>
-                    <p>111 Powers between Leonard Street and Manhattan Avenue, Brooklyn</p>
-                    <p>347.840.0525</p>
-                    <p><a href="http://urbancowboybnb.com/" target="_blank">visit website</a></p>
+                    <p>Airbnb is a great way to take advantage of some amazing apartment rentals in Brooklyn.<br>
+                    <a href="https://www.airbnb.com/" target="_blank">visit website</a></p>
+                    <hr>
+                    <h5>Hotel le Jolie <span class="phone pull-right">718.625.2100</span></h5>
+                    <p>The best value in the neighborhood. Great location, no frills.<br>
+                    235 Meeker Avenue between Union Avenue and Lorimer Street, Brooklyn<br>
+                    <a href="http://www.hotellejolie.com/" target="_blank">visit website</a></p>
+                    <hr>
+                    <h5>McCarren Hotel & Pool <span class="phone pull-right">718.218.750</span></h5>
+                    <p>Upscale and right near the park.<br>
+                    160 North 12th Street between Berry Street and Bedford Avenue, Brooklyn<br>
+                    <a href="http://www.chelseahotels.com/us/brooklyn/mccarren-hotel-and-pool/about" target="_blank">visit website</a></p>
+                    <hr>
+                    <h5>The Henry Norman Hotel <span class="phone pull-right">718.951.6000</span></h5>
+                    <p>A little out of the way but very nice.<br>
+                    251 North Henry Street, Brooklyn<br>
+                    <a href="http://www.henrynormanhotel.com/" target="_blank">visit website</a></p>
+                    <hr>
+                    <h5>Urban Cowboy BnB <span class="phone pull-right">347.840.0525</span></h5>
+                    <p>Rustic and relaxing with a cabin feel.<br>
+                    111 Powers between Leonard Street and Manhattan Avenue, Brooklyn<br>
+                    <a href="http://urbancowboybnb.com/" target="_blank">visit website</a></p>
                 </div>
             </div>
         </div>
@@ -261,10 +257,22 @@
                     <h3>Car Services</h3>
 
                     <p>These are the car service companies available in our neighborhood. You can call them anytime and usually be picked up within five minutes. </p>
-
-                    <p><strong>Northside Car Service</strong> 718.387.2222</p>
-                    <p><strong>Mobile Car Service</strong> 718.383.8300</p>
-                    <p><strong>United Car Service</strong> 718.349.5900</p>
+                    
+                    <div class="row">
+                        <div class="col-md-4">
+                            <p>
+                              <strong>Northside Car Service</strong><br>
+                              <strong>Mobile Car Service</strong><br>
+                              <strong>United Car Service</strong>
+                            </p>
+                        </div>
+                        <div class="col-md-7">
+                            <p class="phone">718.387.2222<br>
+                            718.383.8300<br>
+                            718.349.5900
+                            </p>
+                        </div>
+                    </div>
 
                     <p><a href="https://www.uber.com/" target="_blank">Uber</a> and <a href="https://www.lyft.com/" target="_blank">Lyft</a> are big in New York and definitely the easiest and most luxurious way to get around.</p>
                 </div>
@@ -331,20 +339,20 @@
                 <a href="https://open.spotify.com/user/chrisbup/playlist/5nnW9xXgqzLS409lRUNjly" target="_blank">
                     <div class="col-md-4 light-box box-hover">
                         <h5>Music</h5>
-                        <p class="tighten">A little Spotify Playlist as a soundtrack for the weekend.
+                        <p>A little Spotify Playlist as a soundtrack for the weekend.
                         </p>
                     </div>
                 </a>
                 <a href="https://docs.google.com/spreadsheets/d/1tcP2LHFNipevTnqtIQIz8ml1mMNN8KcneizegfWN7Xw/edit?usp=sharing" target="_blank">
                     <div class="col-md-4 light-box box-hover">
                         <h5>Recipes</h5>
-                        <p class="tighten">These are our faves, now add yours!</p>
+                        <p>These are our favorites, now add yours!</p>
                     </div>
                 </a>
                 <a href="https://docs.google.com/document/d/151MqwgSEeshA_asgdxuYytq90h4wlNQA5V1YSmZJOaM/edit?usp=sharing" target="_blank">
                     <div class="col-md-4 light-box box-hover">
                         <h5>Poetry</h5>
-                        <p class="tighten">Some poems you'll recognize, some you may not. Add your favorites and leave your name in a comment so we know!</p>
+                        <p>Add your most loved poems and leave your name in a comment!</p>
                     </div>
                 </a>
             </div>
@@ -389,14 +397,14 @@
                             <figure>
                                 <a href="http://www.earthjustice.org" target="_blank">
                                     <div class="blog-img-wrap">
-                                        <img src="img/blog-img-02.jpg" alt="Sedna blog image"/>
+                                        <img src="img/blog-img-02.jpg" alt="Earthjustice"/>
                                     </div>
                                 </a>
                                 <figcaption>
-                                    <p class="tighten">In lieu of a traditional registry, we're asking people to make a donation to Earthjustice. You can give <a href="https://secure.earthjustice.org/site/Donation2?df_id=10929&10929.donation=form1&s_subsrc=SubNav" target="_blank">online</a> or over the phone at <strong>415.217.2000</strong> (M-F 12pm–8pm, Eastern Time).</p>
-                                    <p class="tighten">Please include either or both of our names and our address:</p>
-                                    <p class="tighten"><strong>68 Box Street #2R</strong></p>
-                                    <p class="tighten"><strong>Brooklyn, NY 11222</strong></p>
+                                    <p>In lieu of a traditional registry, we're asking people to make a donation to Earthjustice. You can give <a href="https://secure.earthjustice.org/site/Donation2?df_id=10929&10929.donation=form1&s_subsrc=SubNav" target="_blank">online</a> or over the phone at <strong>415.217.2000</strong> (M-F 12pm–8pm, Eastern Time).</p>
+                                    <p>Please include either or both of our names and our address:</p>
+                                    <p><strong>68 Box Street #2R</strong><br>
+                                    <strong>Brooklyn, NY 11222</strong></p>
                                 </figcaption>
                             </figure>
                         </article>
@@ -405,7 +413,7 @@
                         <article class="blog-post">
                             <figure>
                                 <div class="blog-img-wrap">
-                                    <img src="img/blog-img-03.jpg" alt="Sedna blog image"/>
+                                    <img src="img/blog-img-03.jpg" alt="Peru"/>
                                 </div>
                                 <figcaption>
                                     <p class="blog-post-title">But if you'd really like to give us something, we <em>are</em> saving for a trip to Peru!</p>
@@ -431,15 +439,15 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-md-6">
                         <div class="footer-links">
-                            <p>If you'd like a copy of our wedding zine or have any questions at all, don't hesitate to <a href="mailto:chrisheuberg@gmail.com" target="_blank">email me</a>!</p>
+                            <p>If you'd like a copy of our wedding zine or have any questions at all, don't hesitate to <a href="mailto:chrisheuberg@gmail.com" target="_blank">email me</a> !</p>
                             <ul class="footer-group">
                                 <li><a href="#event">event</a></li>
                                 <li><a href="#readings">readings</a></li>
                                 <li><a href="#brooklyn">brooklyn</a></li>
-                                <li><a href="#accomodations">accomodations</a></li>
-                                <li><a href="#transport">transport</a></li>
+                                <li><a href="#accommodations">accommodations</a></li>
+                                <li><a href="#transportation">transport</a></li>
                                 <li><a href="#history">history</a></li>
                                 <li><a href="#jc-gallery">jillian & chris</a></li>
                                 <li><a href="#collaborate">collaborate</a></li>
