--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -298,35 +298,15 @@
     <section class="section-padding" id="jc-gallery">
         <div class="gallery text-center">
             <h2>Jillian & Chris</h2>
-            <ul>
-                <li>
-                    <img src="img/1.png" alt="photo 1" class="single-image">
-                </li>
-                <li>
-                    <img src="img/2.png" alt="photo 2" class="single-image">
-                </li>
-                <li>
-                    <img src="img/3.png" alt="photo 3" class="single-image">
-                </li>
-                <li>
-                    <img src="img/4.png" alt="photo 4" class="single-image">
-                </li>
-                <li>
-                    <img src="img/5.png" alt="photo 5" class="single-image">
-                </li>
-                <li>
-                    <img src="img/6.png" alt="photo 6" class="single-image">
-                </li>
-                <li>
-                    <img src="img/7.png" alt="photo 1" class="single-image">
-                </li>
-                <li>
-                    <img src="img/8.png" alt="photo 2" class="single-image">
-                </li>
-                <li>
-                    <img src="img/9.png" alt="photo 3" class="single-image">
-                </li>
-            </ul>
+            <img src="img/1.png" alt="photo 1">
+            <img src="img/2.png" alt="photo 2">
+            <img src="img/3.png" alt="photo 3">
+            <img src="img/4.png" alt="photo 4">
+            <img src="img/5.png" alt="photo 5">
+            <img src="img/6.png" alt="photo 6">
+            <img src="img/7.png" alt="photo 1">
+            <img src="img/8.png" alt="photo 2">
+            <img src="img/9.png" alt="photo 3">
         </div>
     </section>
     <section class="section-padding" id="collaborate">
