gallery and favicon

--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -140,7 +140,7 @@
             <div class="row">
                 <div>
                     <h2 class="col-md-12 text-center">Readings</h2>
-                </div> 
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-7 wp1">
@@ -216,28 +216,28 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2>Accommodations</h2>   
-                    <br> 
+                    <h2>Accommodations</h2>
+                    <br>
                     <h5>Airbnb</h5>
                     <p><em>Airbnb is a great way to take advantage of some amazing apartment rentals in Brooklyn.</em><br>
                     <a href="https://www.airbnb.com/" target="_blank">visit website</a></p>
                     <hr>
-                    <h5>Hotel le Jolie <span class="phone pull-right">718.625.2100</span></h5>
+                    <h5>Hotel le Jolie <span class="brighten pull-right">718.625.2100</span></h5>
                     <p><em>The best value in the neighborhood. Great location, no frills.</em><br>
                     235 Meeker Avenue between Union Avenue and Lorimer Street, Brooklyn<br>
                     <a href="http://www.hotellejolie.com/" target="_blank">visit website</a></p>
                     <hr>
-                    <h5>McCarren Hotel & Pool <span class="phone pull-right">718.218.750</span></h5>
+                    <h5>McCarren Hotel & Pool <span class="brighten pull-right">718.218.750</span></h5>
                     <p><em>Upscale and right near the park.</em><br>
                     160 North 12th Street between Berry Street and Bedford Avenue, Brooklyn<br>
                     <a href="http://www.chelseahotels.com/us/brooklyn/mccarren-hotel-and-pool/about" target="_blank">visit website</a></p>
                     <hr>
-                    <h5>The Henry Norman Hotel <span class="phone pull-right">718.951.6000</span></h5>
-                    <p></\em>A little out of the way but very nice.</em><br>
+                    <h5>The Henry Norman Hotel <span class="brighten pull-right">718.951.6000</span></h5>
+                    <p><em>A little out of the way but very nice.</em><br>
                     251 North Henry Street, Brooklyn<br>
                     <a href="http://www.henrynormanhotel.com/" target="_blank">visit website</a></p>
                     <hr>
-                    <h5>Urban Cowboy BnB <span class="phone pull-right">347.840.0525</span></h5>
+                    <h5>Urban Cowboy BnB <span class="brighten pull-right">347.840.0525</span></h5>
                     <p><em>Rustic and relaxing with a cozy cabin feel.</em><br>
                     111 Powers between Leonard Street and Manhattan Avenue, Brooklyn<br>
                     <a href="http://urbancowboybnb.com/" target="_blank">visit website</a></p>
@@ -250,39 +250,29 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h2>Traversing the City</h2>
-
                     <p>The best way to get around New York is by <a href="http://web.mta.info/maps/submap.html" target="_blank">subway</a>.<strong> Pro tip:</strong> before purchasing a metro card, use this <a href="http://enterprise.mtanyct.info/MetroCardCalculator/" target="_blank">calculator</a> to determine how many rides you can get out of whatever amount you put on your card. Go with their suggestions to avoid getting stuck with a remaining balance.</p>
-
                     <p>The church and the restaurant are both near the subway, two stops away from each other on the G line.</p>
-
                     <p>New York has an excellent <a href="https://www.citibikenyc.com/" target="_blank">bike sharing system</a> too with hubs all over the city. Extra points for anyone who bikes to the wedding! And <a href="http://www.eastriverferry.com/" target="_blank">The East River Ferry</a> is a great way to get out on the water for not much more than a subway ride.</p>
-
                     <h3>Taxis</h3>
-
                     <p>Yellow taxi cabs can pick up and drop off passengers anywhere in New York City. You'll see them mostly in Manhattan.</p>
-
                     <p>Green taxi cabs (or boro taxis) can be hailed in Manhattan above Central Park and all outer boroughs (the Bronx, Brooklyn, Queens, and Staten Island) except at the airports. They can drop off passengers anywhere, but will not be able to pick up new passengers within Manhattan's <a href="http://www.nyc.gov/html/tlc/images/features/map_service_area.png" target="_blank">"yellow zone"</a> (south of East 96th and West 110th Streets) or at airports. </p>
-
                     <h3>Car Services</h3>
-
                     <p>These are the car service companies available in our neighborhood. You can call them anytime and usually be picked up within five minutes. </p>
-                    
                     <div class="row">
                         <div class="col-md-4">
                             <p>
-                              <strong>Northside Car Service</strong><br>
-                              <strong>Mobile Car Service</strong><br>
-                              <strong>United Car Service</strong>
+                                <strong>Northside Car Service</strong><br>
+                                <strong>Mobile Car Service</strong><br>
+                                <strong>United Car Service</strong>
                             </p>
                         </div>
                         <div class="col-md-7">
-                            <p class="phone">718.387.2222<br>
-                            718.383.8300<br>
-                            718.349.5900
+                            <p class="brighten expand">718.387.2222<br>
+                                718.383.8300<br>
+                                718.349.5900
                             </p>
                         </div>
                     </div>
-
                     <p><a href="https://www.uber.com/" target="_blank">Uber</a> and <a href="https://www.lyft.com/" target="_blank">Lyft</a> are big in New York and definitely the easiest and most luxurious way to get around. Same price as a cab and no need to tip!</p>
                 </div>
             </div>
@@ -307,15 +297,27 @@
     <section class="section-padding" id="jc-gallery">
         <div class="gallery text-center">
             <h2>Jillian & Chris</h2>
-            <img src="img/1.png" alt="photo 1">
-            <img src="img/2.png" alt="photo 2">
-            <img src="img/3.png" alt="photo 3">
-            <img src="img/4.png" alt="photo 4">
-            <img src="img/6.png" alt="photo 6">
-            <img src="img/7.png" alt="photo 7">
-            <img src="img/8.png" alt="photo 8">
-            <img src="img/5.png" alt="photo 5">
-            <img src="img/9.png" alt="photo 9">
+            <div class="container">
+                <ul class="row">
+                    <li class="col-md-4"><img src="img/1.png" alt="photo 1"></li>
+                    <li class="col-md-4"><img src="img/2.png" alt="photo 2"></li>
+                    <li class="col-md-4"><img src="img/3.png" alt="photo 3"></li>
+                    <li class="col-md-4"><img src="img/4.png" alt="photo 4"></li>
+                    <li class="col-md-4"><img src="img/6.png" alt="photo 6"></li>
+                    <li class="col-md-4"><img src="img/7.png" alt="photo 7"></li>
+                    <li class="col-md-4"><img src="img/8.png" alt="photo 8"></li>
+                    <li class="col-md-4"><img src="img/5.png" alt="photo 5"></li>
+                    <li class="col-md-4"><img src="img/9.png" alt="photo 9"></li>
+                </ul>
+            </div>
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                        </div>
+                    </div><!-- /.modal-content -->
+                </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
         </div>
     </section>
     <section class="section-padding" id="collaborate">
@@ -326,23 +328,23 @@
                     <p>This is where we share a few of our favorite things and invite you to contribute yours.</p>
                 </div>
                 <a href="https://open.spotify.com/user/chrisbup/playlist/5nnW9xXgqzLS409lRUNjly" target="_blank">
-                    <div class="col-md-4 light-box box-hover">
-                        <h5>Music</h5>
-                        <p>A little Spotify Playlist as a soundtrack for the weekend.
-                        </p>
-                    </div>
+                <div class="col-md-4 light-box box-hover">
+                    <h5>Music</h5>
+                    <p>A little Spotify Playlist as a soundtrack for the weekend.
+                    </p>
+                </div>
                 </a>
                 <a href="https://docs.google.com/spreadsheets/d/1tcP2LHFNipevTnqtIQIz8ml1mMNN8KcneizegfWN7Xw/edit?usp=sharing" target="_blank">
-                    <div class="col-md-4 light-box box-hover">
-                        <h5>Recipes</h5>
-                        <p>These are our favorites, now add yours!</p>
-                    </div>
+                <div class="col-md-4 light-box box-hover">
+                    <h5>Recipes</h5>
+                    <p>These are our favorites, now add yours!</p>
+                </div>
                 </a>
                 <a href="https://docs.google.com/document/d/151MqwgSEeshA_asgdxuYytq90h4wlNQA5V1YSmZJOaM/edit?usp=sharing" target="_blank">
-                    <div class="col-md-4 light-box box-hover">
-                        <h5>Poetry</h5>
-                        <p>Add your most loved and leave your name in a comment!</p>
-                    </div>
+                <div class="col-md-4 light-box box-hover">
+                    <h5>Poetry</h5>
+                    <p>Add your most loved and leave your name in a comment!</p>
+                </div>
                 </a>
             </div>
         </div>
@@ -351,12 +353,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                  <h2>What's with the hashtag?</h2>
-                  <p>The hashtag is to help collect photos from the evening. If you post any to <a href="https://instagram.com/chrisbup/" target="_blank">Instagram</a>, <a href="https://www.facebook.com/chris.heuberger" target="_blank">Facebook</a>, or <a href="https://twitter.com/chrisbup" target="_blank">Twitter</a>, please tag it with <strong>#GtrainLoveStory</strong> and they will automatically be added to our wedding album on Flickr.</p>
-                  <p>You can also add photos directly to the <a href="https://flic.kr/g/qZ1sq" target="_blank">Flickr allbum</a>.</p>
+                    <h2>What's with the hashtag?</h2>
+                    <p>The hashtag is to help collect photos from the evening. If you post any to <a href="https://instagram.com/chrisbup/" target="_blank">Instagram</a>, <a href="https://www.facebook.com/chris.heuberger" target="_blank">Facebook</a>, or <a href="https://twitter.com/chrisbup" target="_blank">Twitter</a>, please tag it with <strong>#GtrainLoveStory</strong> and they will automatically be added to our wedding album on Flickr.</p>
+                    <p>You can also add photos directly to the <a href="https://flic.kr/g/qZ1sq" target="_blank">Flickr allbum</a>.</p>
                 </div>
             </div>
-        </div>    
+        </div>
     </section>
     <section class="section-padding" id="faq">
         <div class="container">
